--- a/Estilos/Main.css
+++ b/Estilos/Main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
@@ -20,7 +20,7 @@ header {
 
   background-size: 100%;
 
-  height: 100vh;
+  height: 90vh;
   width: 100%;
   background-repeat: no-repeat;
   display: flex;
@@ -40,7 +40,7 @@ nav {
   order: 1;
 }
 .acceso-nav {
-  font-family: "Nunito", sans-serif;
+  font-family: "Poppins", sans-serif;
   color: white;
   font-size: 19px;
   text-decoration: none;
@@ -53,14 +53,18 @@ nav {
 /*------------------Marca Personal-----------*/
 #marca_personal {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+
+  flex-basis: 20%;
+  flex-shrink: 1;
   margin: 80px;
   margin-top: 160px;
   color: white;
   font-size: 20px;
-  flex-direction: row-reverse;
+  flex-direction: row;
   align-items: center;
-  font-family: "Nunito", sans-serif;
+
+  font-family: "Poppins", sans-serif;
 
   position: relative;
   order: -1;
@@ -69,24 +73,22 @@ nav {
   display: flex;
   flex-direction: column;
 }
-#text-MP h1 {
-  font-size: 45px;
+#text-MP h2 {
+  font-size: 35px;
   padding: 9px 0;
+  letter-spacing: 3px;
 }
 
-#text-MP h1 span {
-  color: rgb(249 255 0);
-}
 #text-MP p {
   width: 44rem;
   padding-bottom: 20px;
-  font-weight: bolder;
-  letter-spacing: 2px;
+  padding-top: 20px;
+  letter-spacing: 3px;
 }
 #foto-MP {
-  padding-left: 99px;
+  padding-right: 29px;
 }
 #foto-MP img {
-  height: 260px;
-  width: 287px;
+  height: 10em;
+  width: 20em;
 }
