--- a/Estilos/Main.css
+++ b/Estilos/Main.css
@@ -11,6 +11,8 @@
 }
 :root {
   --naranja-base: #ea8010;
+  --fondo: #f3f1ef;
+  --fuente-general: "Poppins", sans-serif;
 }
 
 /*------------------Header-------------------*/
@@ -36,7 +38,7 @@ nav {
   order: 1;
 }
 .acceso-nav {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--fuente-general);
   color: white;
   font-size: 19px;
   text-decoration: none;
@@ -49,7 +51,7 @@ nav {
 /*------------------Marca Personal-----------*/
 #marca_personal {
   color: white;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--fuente-general);
   position: relative;
   order: -1;
   display: flex;
@@ -86,20 +88,111 @@ nav {
 /*------------------Servicios-----------*/
 #servicios {
   padding: 20px;
-  background: #ecc49a;
+  background: var(--fondo);
 }
 #servicios h2 {
-  color: rgb(49, 24, 1);
-  font-family: "Poppins", sans-serif;
-  font-weight: 50em;
+  color: rgb(150, 101, 56);
+  font-family: var(--fuente-general);
+  font-size: 3em;
+}
+#carrusel {
+  margin: 10px 50px 30px 50px;
+  position: relative;
+  left: 50vh;
+  /*creacion de carrucel*/
+  scroll-snap-type: x mandatory;
+  overflow-x: auto;
+  overscroll-behavior-x: contain;
+  width: 600px;
 }
 #contenido {
   display: flex; /* Equivalente a flex */
   flex-direction: row;
+  gap: 35px;
+  align-items: center;
+  padding: 30px;
+  width: 200%; /* 100% por cada tarjeta */
+  animation: carrusel 16s infinite; /* 4s por tarjeta */
 }
 
 .tarjeta {
-  border: black 3px solid;
-  font-family: "Poppins", sans-serif;
+  background-color: white;
+  border-radius: 7%;
+  font-family: var(--fuente-general);
   list-style: none;
+  padding: 60px;
+  width: 350px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.295);
+  display: flex;
+  flex-direction: column;
+
+  /*creacion de carrucel*/
+  flex: 0 0 50%;
+  height: 400px;
+  scroll-snap-align: center;
+}
+
+.tarjeta p {
+  font-size: 18px;
+  justify-items: center;
+}
+.tarjeta h3 {
+  padding-bottom: 20px;
+
+  color: rgb(97, 50, 6);
+  text-align: center;
+  object-fit: cover;
+  font-size: 35px;
+}
+#capacitacion {
+  gap: 54px;
+  padding-bottom: 40px;
+}
+#fuego {
+  gap: 54px;
+  padding-bottom: 40px;
+}
+#ruido {
+  gap: 54px;
+  padding-bottom: 40px;
+}
+
+.carrusel-nav {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  z-index: 10;
+}
+.flecha {
+  width: 40px;
+  height: 40px;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 1.5rem;
+  user-select: none;
+}
+/* Puntos indicadores */
+.punto.active {
+  background: #2c3e50;
+}
+.indicadores {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+.punto {
+  width: 12px;
+  height: 12px;
+  background: #bdc3c7;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
 }
